--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,74 @@
+.app{
+    height: 100vh;
+    padding: 0 2rem;
+}
+
+.title{
+    font-size: 2rem;
+    font-weight: bold;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.word{
+    font-size: 1.7rem;
+    margin: 1rem auto;
+    text-align: center;
+}
+
+
+/* header */
+.header{
+    text-align: center;
+    margin: 2.5rem auto;
+}
+
+.header-sec{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
 .search{
     color: #fff;
+}
+
+
+/* Audio */
+.audio-sec{
+    width: 100%;
+    margin: 1rem auto;
+    text-align: center;
+}
+
+.audio{
+    width: 50%;
+}
+
+.meanings-sec{
+    height: 50%;
+    overflow-y: auto;
+    scrollbar-width: thin;
+}
+
+.single-meaning{
+    padding: 10px 5px;
+    margin: 5px auto;
+    border-bottom: 1px solid black;
+}
+
+.meaning-text{
+    font-size: 1.2rem;
+    color: #1e84be;
+    font-weight: bold;
+}
+
+.example-text{color: rgba(51, 51, 51, 0.747)}
+
+@media screen and (max-width: 768px) {
+    .app{padding: 0 1rem;}
+    .word{font-size: 1.7rem};
+    .audio-sec{width: 100%;}
+    .audio{width: 75%;}
+    .meanings-sec{height: 50%;}
+
 }
